--- a/2 - html/index.html
+++ b/2 - html/index.html
@@ -6,9 +6,9 @@
     </head>   
     <body style="margin: 0;">
         <header style="background-color:#F7AF9D">
-            <img src="assets/img/logo.png" alt="logo" height="141px" style="display:block;margin-left: auto;margin-right: auto;">   
+            <a href="index.html"><img src="assets/img/logo.png" alt="logo" height="141px" style="display:block;margin-left: auto;margin-right: auto;"></a>
         </header>
-        <div style="height: 465px;text-align: center; color: #0B0014;">
+        <div style="height: 435px;text-align: center; color: #0B0014;">
             <br><br><br><br><br><br><br><br>
             <h1>Bienvenido a Yummy Cake</h1>
             <p>Selecciona el usuario que eres</p><br>
@@ -17,11 +17,12 @@
             <a href="admin.html"style="color: #F7AF9D;text-decoration: none;">Soy pastelero</a><br><br><br>
         </div>
         <footer>
-            <div style="float: left;background-color:#F7AF9D;height: 130px;width: 10%;"><img src="assets/img/logo.png" alt="logo" height="80px" style="display:block;margin-left: auto;margin-right: auto;"></div>
-            <div style="float: left;background-color:#F7AF9D;height: 130px;width: 90%;color: white;">
+            <div style="float: left;background-color:#F7AF9D;height: 160px;width: 10%;"><img src="assets/img/logo.png" alt="logo" height="80px" style="display:block;margin-left: auto;margin-right: auto;"></div>
+            <div style="float: left;background-color:#F7AF9D;height: 160px;width: 90%;color: white;">
                 <h3>Yummy Cake</h3>
-                <p>Calle Iván López #69 Col. Tomasón, Hermosillo, Sonora, México</p> 
-                <p>Atención al cliente: 6321234567</p>  
+                <p><strong>Dirección:</strong> Calle Iván López #69 Col. Tomasón, Hermosillo, Sonora, México</p> 
+                <p><strong>Atención al cliente:</strong> 6321234567</p> 
+                <p><strong>Horario:</strong> Lunes a Sábado, 09-18 horas</p> 
             </div>
         </footer>
     </body>
