--- a/2 - html/index.html
+++ b/2 - html/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <title>Yummy Cake</title>
     </head>   
-    <body style="margin: 0;">
+    <body style="margin: 0;display: flex;min-height: 100vh;flex-direction: column;">
         <header style="background-color:#F7AF9D">
             <a href="index.html"><img src="assets/img/logo.png" alt="logo" height="141px" style="display:block;margin-left: auto;margin-right: auto;"></a>
         </header>
-        <div style="height: 435px;text-align: center; color: #0B0014;">
+        <div style="height: 435px;text-align: center; color: #0B0014;flex: 1;">
             <br><br><br><br><br><br><br><br>
             <h1>Bienvenido a Yummy Cake</h1>
             <p>Selecciona el usuario que eres</p><br>
