--- a/3 - css/index.html
+++ b/3 - css/index.html
@@ -21,7 +21,35 @@
                 </div>
             </header>
             <div class="section1">
-                si
+                <div class="left">
+                    <h1>Fight Virus With Vaccines</h1>
+                    <p>Let's stop this pandemic by killing the virus with a vaccine, don't let yourself and your family get infected</p>
+                    <div class="options">
+                        <div class="option two">
+                            <div class="icon yellow">
+                                <img src="assets/img/secure.png">
+                            </div>
+                            <p>Best protection</p>
+                        </div>
+                        <div class="option two">
+                            <div class="icon yellow">
+                                <img src="assets/img/star.png">
+                            </div>
+                            <p>Selected vaccines</p>
+                        </div>
+                    </div>
+                    <div class="options bottom">
+                        <div class="option one">
+                            <div class="icon blue">
+                                <img src="assets/img/reloj.png">
+                            </div>
+                            <p>Schedule your vaccinations</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <img class="big-pic" src="./assets/img/pic2.png">
+                </div>
             </div>
         </div>
     </body>
