--- a/3 - css/index.html
+++ b/3 - css/index.html
@@ -51,6 +51,7 @@
                     <img class="big-pic" src="./assets/img/pic2.png">
                 </div>
             </div>
+            <img class="logos" src="assets/img/logos.png">
         </div>
     </body>
 </html>
