--- a/3 - css/index.html
+++ b/3 - css/index.html
@@ -52,6 +52,40 @@
                 </div>
             </div>
             <img class="logos" src="assets/img/logos.png">
+            <div class="section2">
+                <h2>Why should I vaccine?</h2>
+                <p class="text">In order to avoid any doubts about getting the COVID-19 vaccine, identify the following 4 benefits of COVID-19 vaccination:</p>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="icon blue">
+                            <img src="assets/img/sliders.png">
+                        </div>
+                        <h4>Minize the spread of viruses</h4>
+                        <p>Vaccine has been proven effective to prevent someone from getting infected with Coronavirus</p>
+                    </div>
+                    <div class="card">
+                        <div class="icon blue">
+                            <img src="assets/img/secure2.png">
+                        </div>
+                        <h4>Forming <br> antibodies</h4>
+                        <p>COVID-19 vaccine proven to help shape antibody response for immune system</p>
+                    </div>
+                    <div class="card">
+                        <div class="icon blue">
+                            <img src="assets/img/pareja.png">
+                        </div>
+                        <h4>Protecting people nearby</h4>
+                        <p>The benefits of COVID-19 vaccination are the vaccine that we get can also help protect  people around us</p>
+                    </div>
+                    <div class="card">
+                        <div class="icon blue">
+                            <img src="assets/img/diagram.png">
+                        </div>
+                        <h4>Creating group immunity</h4>
+                        <p>COVID-19 vaccination is also beneficial for creating group immunity or herd immunity</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
