--- a/3 - css/index.html
+++ b/3 - css/index.html
@@ -86,6 +86,62 @@
                     </div>
                 </div>
             </div>
+            <div class="section3">
+                <div class="left">
+                    <img src="assets/img/pic3.png">
+                </div>
+                <div class="right">
+                    <h2>Preparations Before Vaccine</h2>
+                    <p class="text">The success of vaccines is strongly influenced by the strenght of the body's immune system. Therefore, there are severak things that can be tried to make the COVID-19 vaccine work:</p>
+                    <div class="column-container">
+                        <div class="column">
+                            <div class="icon blue">
+                                <img src="assets/img/secure2.png">
+                            </div>
+                            <p>Avoid alcoholic beverages</p>
+                            <div class="icon blue">
+                                <img src="assets/img/dropdown.png">
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="icon blue">
+                                <img src="assets/img/cancel.png">
+                            </div>
+                            <p>Avoid stress</p>
+                            <div class="icon blue">
+                                <img src="assets/img/dropdown.png">
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="icon blue">
+                                <img src="assets/img/diagram.png">
+                            </div>
+                            <p>Eat healthy food</p>
+                            <div class="icon blue">
+                                <img src="assets/img/dropdown.png">
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="icon blue">
+                                <img src="assets/img/comprobar.png">
+                            </div>
+                            <p>Get enough sleep</p>
+                            <div class="icon blue">
+                                <img src="assets/img/dropdown.png">
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="icon blue">
+                                <img src="assets/img/heart.png">
+                            </div>
+                            <p>Exercise or physical activity</p>
+                            <div class="icon blue">
+                                <img src="assets/img/dropdown.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
