--- a/3 - css/index.html
+++ b/3 - css/index.html
@@ -142,6 +142,65 @@
                     </div>
                 </div>
             </div>
+            <div class="section4">
+                <div class="left">
+                    <h2>Emergency Contact</h2>
+                    <p>Contact one of the contacts below if you or your family feel unwell and have similar symptons such as Covid-19, make sure you also take care of yourself before reporting to us:</p>
+                    <div class="grid-container">
+                        <div class="grid">
+                            <div class="top">
+                                <div class="icon blue">
+                                    <img src="assets/img/call.png">
+                                </div>
+                                <div>
+                                    <h4>Call</h4>
+                                    <p>0.21.123.145.14</p>
+                                </div>
+                            </div>
+                            <p class="button light">Call Now</p>
+                        </div>
+                        <div class="grid">
+                            <div class="top">
+                                <div class="icon blue">
+                                    <img src="assets/img/chat.png">
+                                </div>
+                                <div>
+                                    <h4>Chat</h4>
+                                    <p>0.21.123.145.14</p>
+                                </div>
+                            </div>
+                            <p class="button">Chat Now</p>
+                        </div>
+                        <div class="grid">
+                            <div class="top">
+                                <div class="icon blue">
+                                    <img src="assets/img/videocall.png">
+                                </div>
+                                <div>
+                                    <h4>Video Call</h4>
+                                    <p>0.21.123.145.14</p>
+                                </div>
+                            </div>
+                            <p class="button light">Video Call Now</p>
+                        </div>
+                        <div class="grid">
+                            <div class="top">
+                                <div class="icon blue">
+                                    <img src="assets/img/email.png">
+                                </div>
+                                <div>
+                                    <h4>Message</h4>
+                                    <p>0.21.123.145.14</p>
+                                </div>
+                            </div>
+                            <p class="button light">Message Now</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <img src="assets/img/pic4.png">
+                </div>
+            </div>
         </div>
     </body>
 </html>
