--- a/3 - css/index.html
+++ b/3 - css/index.html
@@ -201,6 +201,41 @@
                     <img src="assets/img/pic4.png">
                 </div>
             </div>
+            <footer>
+                <div class="box-container">
+                    <div class="vaccination">
+                        <div class="logo">Vaccination</div>
+                        <p>Our goal is to help the world free from the ongoing pandemic</p>
+                    </div>
+                    <div class="info">
+                        <div>
+                            <h2>About</h2>
+                            <p>About us</p>
+                            <p>Features</p>
+                            <p>News & Blog</p>
+                        </div>
+                        <div>
+                            <h2>Company</h2>
+                            <p>How We Work?</p>
+                            <p>Capital</p>
+                            <p>Security</p>
+                        </div>
+                        <div>
+                            <h2>Support</h2>
+                            <p>FAQs</p>
+                            <p>Support Center</p>
+                            <p>Contact Us</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="legal">
+                    <p>@2021 Vaccination. All rights reserved</p>
+                    <div class="terms">
+                        <p>Terms & Agreements</p>
+                        <p>Privacy Policy</p>
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
